@@ -261,7 +261,7 @@
         <dd>The amount of LOB data to buffer in memory before caching to disk. The
           value is in bytes for <code>Blob</code> data and chars for <code>Clob</code>
           data.</dd>
-        <dt><code>loginTimeout</code> (default - <code>0</code> for TCP/IP connections
+        <dt><code>loginTimeout</code> (default - <code>60</code> for TCP/IP connections
           or <code>20</code> for named pipe connections)</dt>
         <dd>The amount of time to wait (in seconds) for a successful connection
           before timing out.<br/>
